<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLibrary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LibraryFragment">

    <TextView
        android:id="@+id/tvHeaderLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearchLibrary"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search"
        app:startIconTint="@color/green"
        app:boxStrokeColor="@color/til_stroke"
        app:hintTextColor="@color/green"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderLibrary"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSortLibrary"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/sort_by"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:endIconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSearchLibrary">

        <AutoCompleteTextView
            android:id="@+id/actvSortLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStatusFilterLibrary"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/status_filter"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:endIconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSortLibrary">

        <AutoCompleteTextView
            android:id="@+id/actvStatusFilterLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swFavoritesFilterLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/favorites"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="@+id/tilStatusFilterLibrary"
        app:layout_constraintTop_toBottomOf="@id/tilStatusFilterLibrary" />

    <ProgressBar
        android:id="@+id/pbLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/swFavoritesFilterLibrary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibrary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swFavoritesFilterLibrary"
        tools:listitem="@layout/item_library" />

    <TextView
        android:id="@+id/tvEmptyLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_library"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/swFavoritesFilterLibrary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>