...
            android:layout_marginEnd="8dp"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/btnDeleteLibrary"
            app:layout_constraintStart_toEndOf="@+id/ivGameCoverLibrary"
            app:layout_constraintTop_toTopOf="@+id/ivGameCoverLibrary"
            tools:text="Játék neve"/>

        <TextView
            android:id="@+id/tvGameYearLibrary"
...
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#D32F2F" />

        <ImageButton
            android:id="@+id/btnFavoriteLibrary"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_heart_outline"
            app:layout_constraintBottom_toBottomOf="parent"
...
