...
    <string name="change_password">Jelszó megváltoztatása</string>
    <string name="save">Mentés</string>
    <string name="password_changed_successfully">Jelszó sikeresen megváltoztatva!</string>
    <string name="error_changing_password">Hiba történt a jelszó módosítása során!</string>

    <string name="yes">Igen</string>
    <string name="cancel">Mégsem</string>

    <string name="cover">Borító</string>
    <string name="add_to_library">Könyvtárhoz ad</string>
    <string name="add_to_wishlist">Kívánságlistához ad</string>
    <string name="unknown_year">Ismeretlen év</string>
    <string name="unknown_publisher">Ismeretlen kiadó</string>
...
    <string name="status_finished">Végigjátszott</string>
    <string name="sort_by">Rendezés</string>
    <string name="unknown_game">Ismeretlen játék</string>
    <string name="status_label">Státusz: %1$s</string>
    <string name="error_data_load">Hiba az adatok betöltésekor!</string>
    <string name="error_network_base">Hálózati hiba!</string>
    <string name="delete_title">Törlés</string>
    <string name="delete_message_library">Biztosan törölni szeretnéd a(z) %1$s nevű játékot a könyvtáradból?</string>
    <string name="delete_success">Játék sikeresen törölve!</string>
    <string name="delete_error">Hiba történt a törlés során!</string>
    <string name="empty_library">Nincsenek játékok a könyvtáradban.</string>
    <string name="favorites">Kedvencek</string>

...
